# xxhashct

./: CMakeLists.txt  LICENSE  test.cpp  xxh32.hpp  xxh64.hpp
